[package]
name = "bn-ws-latency-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
futures-util = "0.3"
rdkafka = { version = "0.36", features = ["tokio"] }

[profile.release]
# Enable SIMD optimizations for sonic-rs
opt-level = 3
lto = true
codegen-units = 1
